fixed nav bar overflow

--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -33,6 +33,7 @@
     padding: 0px 20px;
     flex-flow: row nowrap;
     align-content: center;
+    overflow: auto;
 }
 
 .NavItem {
